export const snapshot = {};

snapshot[`should return correct react component. 1`] = `
'import React, { memo, PropsWithChildren } from "react";

export interface LoremIpsumProps {}

const LoremIpsum = memo((({}: PropsWithChildren<LoremIpsumProps>) => {
  return <>LoremIpsum</>;
}));

export default LoremIpsum;
'
`;

snapshot[`should return correct react component. 2`] = `
'import React, { forwardRef, memo, HTMLAttributes } from "react";

type RefElement = HTMLDivElement;
type RefElementProps = HTMLAttributes<HTMLDivElement>;

export interface LoremIpsumProps extends RefElementProps {}

const LoremIpsum = memo(forwardRef<RefElement, LoremIpsumProps>((props, ref) => {
  return <div ref={ref} {...props}>Lorem Ipsum</div>;
}));

export default LoremIpsum;

LoremIpsum.displayName = "LoremIpsum";
'
`;

snapshot[`should return correct react component. 3`] = `
'import React, { memo, PropsWithChildren } from "react";

export interface LoremIpsumProps {}

export const LoremIpsum = memo((({}: PropsWithChildren<LoremIpsumProps>) => {
  return <>LoremIpsum</>;
}));


'
`;

snapshot[`should return correct react component. 4`] = `
'import React, { forwardRef, memo, HTMLAttributes } from "react";

type RefElement = HTMLDivElement;
type RefElementProps = HTMLAttributes<HTMLDivElement>;

export interface LoremIpsumProps extends RefElementProps {}

export const LoremIpsum = memo(forwardRef<RefElement, LoremIpsumProps>((props, ref) => {
  return <div ref={ref} {...props}>Lorem Ipsum</div>;
}));



LoremIpsum.displayName = "LoremIpsum";
'
`;
